# Learning_Edge

./: .gitignore  ACCOMPLISHMENTS.md  README.md  REQUIREMENTS.md  app.py  clear_and_ingest.py  download_model.py  find_ensemble.py  generate_pdf.py  generate_pdfs.py  generate_rag_pdf.py  launcher.py  main.py  mock_graph.py  pyproject.toml  rebuild_knowledge_graph.py  start_dev.bat  start_tutor.bat  switch_model.py  test_chroma.py  test_context_retrieval.py  test_iframe.py  test_imports.py  test_langchain_chroma.py  test_reader.py  test_retrieve.py  test_retriever.py  update_graph.py
.streamlit/: config.toml
Project/: requirements.txt
Project/Kaggle/: Phase 1.ipynb  Phase 2.ipynb
Project/frontend/: package-lock.json  package.json  tailwind.config.js
Project/frontend/src/: App.jsx  api.js  index.css
app/agents/: orchestrator.py
app/graph/: history_graph.py  knowledge_graph.json  knowledge_graph.py
app/memory/: user_memory.py
app/rag/: ingestion.py  retrieval.py
app/utils/: config.py  curriculum_divider.py  ollama_helper.py  reset_db.py
backend/: main.py
curriculum_samples/: computer_networks_101.txt  database_systems_101.txt  distributed_systems_101.txt  machine_learning_101.txt  nlp_101.txt  software_engineering_101.txt
evaluation/: __init__.py  eval_pipeline.py  eval_quiz.py  eval_response.py  eval_retrieval.py  gold_dataset.json  run_evaluation.py
frontend/: package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AgentPage.jsx  ChatPage.jsx  DashboardPage.jsx  GraphPage.jsx  Markdown.jsx  QuizPage.jsx  Sidebar.jsx
(+3 files in other folders)
